# mesh-simplification

./: .clang-format  .clang-tidy  .gitattributes  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  LICENSE  MeshSimplification.sln  MeshSimplification.sln.DotSettings  OpenGL.sln  OpenGL.sln.DotSettings  README.md  ReSharper.DotSettings  cpp_core_guidelines.ruleset  vcpkg.json
MeshSimplification/: MeshSimplification.vcxproj  MeshSimplification.vcxproj.filters  main.cpp
MeshSimplification/app/: scene.cpp  scene.h  window.cpp  window.h
MeshSimplification/common/: ptr_conversion.h
MeshSimplification/geometry/: face.cpp  face.h  half_edge.h  half_edge_mesh.cpp  half_edge_mesh.h  mesh_simplifier.cpp  mesh_simplifier.h  vertex.cpp  vertex.h
MeshSimplification/graphics/: arcball.cpp  arcball.h  camera.h  frame_timer.h  material.h  mesh.cpp  mesh.h  obj_loader.cpp  obj_loader.h  scene.cpp  scene.h  shader_program.cpp  shader_program.h  texture.cpp  texture2d.cpp  texture2d.h  window.cpp  window.h
MeshSimplification/shaders/: fragment.glsl  mesh_fragment.glsl  mesh_vertex.glsl  vertex.glsl
MeshSimplification/utils/: ptr_conversion.h
MeshSimplificationTest/: MeshSimplificationTest.vcxproj  MeshSimplificationTest.vcxproj.filters  main.cpp  ptr_conversion_test.cpp
MeshSimplificationTest/geometry/: face_test.cpp  half_edge_mesh_test.cpp  half_edge_test.cpp  mesh_simplifier_test.cpp  vertex_test.cpp
MeshSimplificationTest/graphics/: arcball_test.cpp  mesh_test.cpp  obj_loader_test.cpp
MeshSimplificationTest/utils/: ptr_conversion_test.cpp
OpenGL/: OpenGL.sln  OpenGL.sln.DotSettings  OpenGL.vcxproj  OpenGL.vcxproj.filters  cpp_core_guidelines.ruleset  face.h  half_edge.h  main.cpp  material.cpp  material.h  mesh.hpp  object_loader.hpp  shader.hpp  shader_program.hpp  vertex.h  window.cpp  window.h
OpenGL/engine/: arcball.cpp  arcball.h  window.cpp  window.h
OpenGL/engine/graphics/: arcball.cpp  arcball.h  material.h  mesh.cpp  mesh.h  obj_loader.cpp  obj_loader.h  shader_program.cpp  shader_program.h  texture2d.cpp  texture2d.h
OpenGL/exception/: file_not_found_exception.hpp
OpenGL/geometry/: face.cpp  face.h  half_edge.cpp  half_edge.h  half_edge_mesh.cpp  half_edge_mesh.h  hash.h  mesh_simplifier.cpp  mesh_simplifier.h  vertex.h
OpenGL/graphics/: arcball.cpp  arcball.h  material.h  mesh.cpp  mesh.h  mesh.hpp  obj_loader.cpp  obj_loader.h  object_loader.hpp  point_light.h  point_light.hpp  shader.hpp  shader_program.cpp  shader_program.h  shader_program.hpp  texture2d.cpp  texture2d.h  texture2d.hpp  window.cpp  window.h  window.hpp
OpenGL/shaders/: fragment.glsl  vertex.glsl
OpenGL/utils/: file.cpp  file.h  file.hpp  file_utils.hpp  string.h  string.hpp  string_utils.hpp
OpenGLTest/: OpenGLTest.vcxproj  OpenGLTest.vcxproj.filters  arcball_test.cpp  file_test.cpp  half_edge_test.cpp  main.cpp  object_loader_test.cpp
OpenGLTest/engine/: arcball_test.cpp
OpenGLTest/engine/graphics/: mesh_test.cpp  obj_loader_test.cpp
OpenGLTest/geometry/: face_test.cpp  half_edge_mesh_test.cpp  half_edge_test.cpp  hash_test.cpp  mesh_simplifier_test.cpp  vertex_test.cpp
OpenGLTest/graphics/: arcball_test.cpp  mesh_test.cpp  obj_loader_test.cpp  object_loader_test.cpp
OpenGLTest/utils/: string_test.cpp  string_utils_test.cpp
src/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/assets/shaders/: mesh_fragment.glsl  mesh_vertex.glsl
src/geometry/: face.cpp  face.h  half_edge.h  half_edge_mesh.cpp  half_edge_mesh.h  mesh_simplifier.cpp  mesh_simplifier.h  vertex.h
src/graphics/: arc_camera.cpp  arc_camera.h  arcball.cpp  arcball.h  delta_time.h  material.h  mesh.cpp  mesh.h  obj_loader.cpp  obj_loader.h  scene.cpp  scene.h  shader_program.cpp  shader_program.h  window.cpp  window.h
tests/: CMakeLists.txt  main.cpp
tests/geometry/: face_test.cpp  half_edge_mesh_test.cpp  half_edge_test.cpp  vertex_test.cpp
tests/graphics/: arcball_test.cpp  mesh_test.cpp  obj_loader_test.cpp
